--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,3 +1,34 @@
 .login-form {
   background: white;
 }
+.error-container {
+  text-align: center;
+  .error-message {
+    font-size: 1.5rem;
+    color: rgb(255, 0, 0);
+  }
+  .button {
+    text-shadow: -1px 2px 1px black;
+    font-size: 1em;
+    background: black;
+    color: coral;
+    border: 1px solid #ffffff;
+    padding: 4px;
+    margin: 5px;
+    border-radius: 10px;
+    font-weight: 650;
+    text-decoration: none;
+    letter-spacing: 1px;
+    transition: all 200ms ease-in-out;
+  }
+
+  .button:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 10px white, 0px 0px 10px coral;
+  }
+  .button:active {
+    color: black;
+    background-color: white;
+    box-shadow: 0px 0px 10px coral, 0px 0px 10px rgb(255, 255, 255);
+  }
+}
